@@ -12,14 +12,14 @@
 <!-- Hadoop Setup -->
 <property>
   <name>hadoop.bin.path</name>
-  <value>${user.dir}/../../../bin/hadoop</value>
+  <value>${user.dir}/hadoopcore/bin/hadoop</value>
   <!-- note that the hive shell script also uses this property name -->
   <description>Path to hadoop binary. Assumes that by default we are executing from hive</description>
 </property>
 
 <property>
   <name>hadoop.config.dir</name>
-  <value>${user.dir}/../../../conf</value>
+  <value>${user.dir}/hadoopcore/conf</value>
   <!-- note that the hive shell script also uses this property name -->
   <description>Path to hadoop configuration. Again assumes that by default we are executing from hive/</description>
 </property>
