@@ -95,6 +95,40 @@ name|hadoop
 operator|.
 name|hive
 operator|.
+name|metastore
+operator|.
+name|MetaStoreUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|metastore
+operator|.
+name|api
+operator|.
+name|FieldSchema
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
 name|ql
 operator|.
 name|parse
@@ -245,6 +279,24 @@ name|ql
 operator|.
 name|exec
 operator|.
+name|FetchTask
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|ql
+operator|.
+name|exec
+operator|.
 name|TaskFactory
 import|;
 end_import
@@ -264,6 +316,24 @@ operator|.
 name|exec
 operator|.
 name|Utilities
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|ql
+operator|.
+name|plan
+operator|.
+name|tableDesc
 import|;
 end_import
 
@@ -347,11 +417,9 @@ argument_list|(
 literal|"hive.ql.Driver"
 argument_list|)
 decl_stmt|;
-specifier|static
-specifier|final
 specifier|private
 name|int
-name|MAX_ROWS
+name|maxRows
 init|=
 literal|100
 decl_stmt|;
@@ -459,6 +527,158 @@ block|}
 return|return
 name|jobs
 return|;
+block|}
+comment|/**    * Return the Thrift DDL string of the result    */
+specifier|public
+name|String
+name|getSchema
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+if|if
+condition|(
+name|sem
+operator|!=
+literal|null
+operator|&&
+name|sem
+operator|.
+name|getFetchTask
+argument_list|()
+operator|!=
+literal|null
+condition|)
+block|{
+if|if
+condition|(
+operator|!
+name|sem
+operator|.
+name|getFetchTaskInit
+argument_list|()
+condition|)
+block|{
+name|sem
+operator|.
+name|setFetchTaskInit
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|sem
+operator|.
+name|getFetchTask
+argument_list|()
+operator|.
+name|initialize
+argument_list|(
+name|conf
+argument_list|)
+expr_stmt|;
+block|}
+name|FetchTask
+name|ft
+init|=
+operator|(
+name|FetchTask
+operator|)
+name|sem
+operator|.
+name|getFetchTask
+argument_list|()
+decl_stmt|;
+name|tableDesc
+name|td
+init|=
+name|ft
+operator|.
+name|getTblDesc
+argument_list|()
+decl_stmt|;
+name|String
+name|tableName
+init|=
+name|td
+operator|.
+name|getTableName
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|tableName
+operator|==
+literal|null
+condition|)
+block|{
+name|tableName
+operator|=
+literal|"result"
+expr_stmt|;
+block|}
+name|List
+argument_list|<
+name|FieldSchema
+argument_list|>
+name|lst
+init|=
+name|MetaStoreUtils
+operator|.
+name|getFieldsFromDeserializer
+argument_list|(
+name|tableName
+argument_list|,
+name|td
+operator|.
+name|getDeserializer
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|String
+name|schema
+init|=
+name|MetaStoreUtils
+operator|.
+name|getDDLFromFieldSchema
+argument_list|(
+name|tableName
+argument_list|,
+name|lst
+argument_list|)
+decl_stmt|;
+return|return
+name|schema
+return|;
+block|}
+return|return
+literal|null
+return|;
+block|}
+comment|/**    * Return the maximum number of rows returned by getResults    */
+specifier|public
+name|int
+name|getMaxRows
+parameter_list|()
+block|{
+return|return
+name|maxRows
+return|;
+block|}
+comment|/**    * Set the maximum number of rows returned by getResults    */
+specifier|public
+name|void
+name|setMaxRows
+parameter_list|(
+name|int
+name|maxRows
+parameter_list|)
+block|{
+name|this
+operator|.
+name|maxRows
+operator|=
+name|maxRows
+expr_stmt|;
 block|}
 specifier|public
 name|boolean
@@ -1343,21 +1563,31 @@ name|conf
 argument_list|)
 expr_stmt|;
 block|}
-name|boolean
-name|ret
+name|FetchTask
+name|ft
 init|=
+operator|(
+name|FetchTask
+operator|)
 name|sem
 operator|.
 name|getFetchTask
 argument_list|()
+decl_stmt|;
+name|ft
+operator|.
+name|setMaxRows
+argument_list|(
+name|maxRows
+argument_list|)
+expr_stmt|;
+return|return
+name|ft
 operator|.
 name|fetch
 argument_list|(
 name|res
 argument_list|)
-decl_stmt|;
-return|return
-name|ret
 return|;
 block|}
 if|if
@@ -1396,7 +1626,7 @@ while|while
 condition|(
 name|numRows
 operator|<
-name|MAX_ROWS
+name|maxRows
 condition|)
 block|{
 if|if
