@@ -288,6 +288,37 @@ operator|.
 name|inputFileFormatClass
 return|;
 block|}
+comment|/**    * Return a deserializer object corresponding to the tableDesc    */
+specifier|public
+name|Deserializer
+name|getDeserializer
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Deserializer
+name|de
+init|=
+name|this
+operator|.
+name|deserializerClass
+operator|.
+name|newInstance
+argument_list|()
+decl_stmt|;
+name|de
+operator|.
+name|initialize
+argument_list|(
+literal|null
+argument_list|,
+name|properties
+argument_list|)
+expr_stmt|;
+return|return
+name|de
+return|;
+block|}
 specifier|public
 name|void
 name|setInputFileFormatClass
