@@ -6,6 +6,8 @@ Trunk (unreleased changes)
 
   NEW FEATURES
 
+    HIVE-73. Thrift Server and Client for Hive (Raghu through zshao)
+
     HIVE-113. Distribute by and sort by support. (zshao)
 
     HIVE-118. Add date related functions. (zshao)
